--- a/environment.yml
+++ b/environment.yml
@@ -1,42 +1,125 @@
 name: calculator-env
 channels:
   - pytorch
-  - conda-forge
   - anaconda
+  - conda-forge
   - defaults
 dependencies:
-  - python=3.8
-  - pywin32
-  - cudatoolkit=11.0
-  - pytorch==1.7.1
-  - torchvision==0.8.2
-  - brotli==1.0.9
-  - click==8.1.3
-  - colorama==0.4.5
-  - dash-bootstrap-components==1.2.1
-  - dash-core-components==2.0.0
-  - dash-html-components==2.0.0
-  - dash-table==5.0.0
-  - dash==2.6.1
-  - flask-compress==1.12
-  - flask==2.2.2
-  - itsdangerous==2.1.2
-  - jinja2==3.1.2
-  - markupsafe==2.1.1
-  - numpy==1.23.1
-  - plotly==5.10.0
-  - tenacity==8.0.1
-  - werkzeug==2.2.2
-  - zipp==3.8.1
-  - git
-  - pip
+  - blas=2.116=mkl
+  - blas-devel=3.9.0=16_win64_mkl
+  - brotli=1.0.9=hcfcfb64_8
+  - brotli-bin=1.0.9=hcfcfb64_8
+  - brotli-python=1.0.9=py38hd3f51b4_8
+  - bzip2=1.0.8=h8ffe710_4
+  - ca-certificates=2022.10.11=haa95532_0
+  - click=8.1.3=win_pyhd8ed1ab_2
+  - colorama=0.4.5=pyhd8ed1ab_0
+  - console_shortcut=0.1.1=4
+  - cudatoolkit=11.0.3=hd336c7a_11
+  - dash=2.6.1=pyhd8ed1ab_0
+  - dash-bootstrap-components=1.2.1=pyhd8ed1ab_0
+  - dash-core-components=2.0.0=pyhd8ed1ab_1
+  - dash-html-components=2.0.0=pyhd8ed1ab_1
+  - dash-table=5.0.0=pyhd8ed1ab_1
+  - flask=2.2.2=pyhd8ed1ab_0
+  - flask-compress=1.12=pyhd8ed1ab_1
+  - freetype=2.8=vc14h17c9bdf_0
+  - git=2.39.0=h57928b3_0
+  - intel-openmp=2023.0.0=h57928b3_25922
+  - itsdangerous=2.1.2=pyhd8ed1ab_0
+  - jinja2=3.1.2=pyhd8ed1ab_1
+  - jpeg=9b=vc14h4d7706e_1
+  - libblas=3.9.0=16_win64_mkl
+  - libbrotlicommon=1.0.9=hcfcfb64_8
+  - libbrotlidec=1.0.9=hcfcfb64_8
+  - libbrotlienc=1.0.9=hcfcfb64_8
+  - libcblas=3.9.0=16_win64_mkl
+  - libffi=3.4.2=h8ffe710_5
+  - liblapack=3.9.0=16_win64_mkl
+  - liblapacke=3.9.0=16_win64_mkl
+  - libpng=1.6.32=vc14h5163883_3
+  - libsqlite=3.40.0=hcfcfb64_0
+  - libtiff=4.0.8=vc14h04e2a1e_10
+  - libuv=1.44.2=h8ffe710_0
+  - libwebp=1.2.4=hcfcfb64_1
+  - libwebp-base=1.2.4=h8ffe710_0
+  - libzlib=1.2.13=hcfcfb64_4
+  - m2w64-gcc-libgfortran=5.3.0=6
+  - m2w64-gcc-libs=5.3.0=7
+  - m2w64-gcc-libs-core=5.3.0=7
+  - m2w64-gmp=6.1.0=2
+  - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
+  - markupsafe=2.1.1=py38h91455d4_2
+  - mkl=2022.1.0=h6a75c08_874
+  - mkl-devel=2022.1.0=h57928b3_875
+  - mkl-include=2022.1.0=h6a75c08_874
+  - msys2-conda-epoch=20160418=1
+  - ninja=1.11.0=h2d74725_0
+  - numpy=1.23.1=py38h223ccf5_0
+  - openssl=3.0.7=hcfcfb64_1
+  - pip=22.3.1=pyhd8ed1ab_0
+  - plotly=5.10.0=pyhd8ed1ab_0
+  - python=3.8.15=h4de0772_0_cpython
+  - python_abi=3.8=3_cp38
+  - pytorch=1.7.1=py3.8_cuda110_cudnn8_0
+  - pywin32=304=py38hd3f51b4_2
+  - setuptools=65.6.3=pyhd8ed1ab_0
+  - tbb=2021.7.0=h91493d7_0
+  - tenacity=8.0.1=pyhd8ed1ab_0
+  - tk=8.6.12=h8ffe710_0
+  - torchvision=0.8.2=py38_cu110
+  - typing_extensions=4.4.0=pyha770c72_0
+  - ucrt=10.0.22621.0=h57928b3_0
+  - vc=14.3=h3d8a991_9
+  - vs2015_runtime=14.32.31332=h1d6e394_9
+  - werkzeug=2.2.2=pyhd8ed1ab_0
+  - wheel=0.38.4=pyhd8ed1ab_0
+  - xz=5.2.6=h8d14728_0
+  - zipp=3.8.1=pyhd8ed1ab_0
+  - zlib=1.2.13=hcfcfb64_4
   - pip:
-    - pillow==7.1.2
-    - seaborn
+    - asttokens==2.2.1
+    - backcall==0.2.0
+    - certifi==2022.12.7
+    - charset-normalizer==2.1.1
+    - contourpy==1.0.6
+    - cycler==0.11.0
+    - decorator==5.1.1
+    - executing==1.2.0
+    - fonttools==4.38.0
+    - gitdb==4.0.10
+    - gitpython==3.1.30
+    - idna==3.4
     - importlib-metadata==4.12.0
-    - opencv-python==4.6.0.66
-    - requests
     - ipython==8.4.0
+    - jedi==0.18.2
+    - kiwisolver==1.4.4
+    - matplotlib==3.6.2
+    - matplotlib-inline==0.1.6
+    - mpmath==1.2.1
+    - opencv-python==4.6.0.66
+    - packaging==22.0
+    - pandas==1.5.2
+    - parso==0.8.3
+    - pickleshare==0.7.5
+    - pillow==7.1.2
+    - prompt-toolkit==3.0.36
     - psutil==5.9.1
-    - pyyaml
+    - pure-eval==0.2.2
+    - pygments==2.14.0
+    - pyparsing==3.0.9
+    - python-dateutil==2.8.2
+    - pytz==2022.7
+    - pyyaml==6.0
+    - requests==2.28.1
     - scipy==1.4.1
+    - seaborn==0.12.2
+    - six==1.16.0
+    - smmap==5.0.0
+    - stack-data==0.6.2
+    - sympy==1.11.1
+    - tqdm==4.64.1
+    - traitlets==5.8.0
+    - urllib3==1.26.13
+    - wcwidth==0.2.5
+prefix: D:\anaconda\envs\calculator-env
